--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,4 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
+/* .main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -116,14 +112,17 @@
 }
 
 @media (prefers-color-scheme: dark) {
+
   .card,
   .footer {
     border-color: #222;
   }
+
   .code {
     background: #111;
   }
+
   .logo img {
     filter: invert(1);
   }
-}
+} */
